--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 					<article class="card">
 						<div class="card-image">
 							<img src="./assets/01.jpg" alt="user name" />
-							<span class="card-title">Alice</span>
+							<span class="card-title">Calla</span>
 						</div>
 
 						<div class="card-content">
 							<ul class="list-group">
-								<li class="list-group-item"><strong>Name:</strong> Alice</li>
-								<li class="list-group-item"><strong>Age:</strong> 30</li>
+								<li class="list-group-item"><strong>Name:</strong> Calla</li>
+								<li class="list-group-item"><strong>Age:</strong> 12</li>
 								<li class="list-group-item">
 									<strong>Address:</strong> 45 Oak Avenue
 									<img class="list-group-img" src="./assets/apart.svg" alt="" />
 								</li>
 								<li class="list-group-item">
-									<strong>Role:</strong> Software Engineer
+									<strong>Role:</strong> CFO
 								</li>
 							</ul>
 						</div>
